feat: header component style just imported into the project.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,8 @@
 
 @import "pages/home";
 
+@import "components/header-component";
+
 body {
   font-size: 1em;
   font-family: $personio-font-family;
