feat: list component and hierarchy styles just imported into the project.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,10 @@
 @import "globals/colors";
 
 @import "pages/home";
+@import "pages/hierarchy";
 
 @import "components/header-component";
+@import "components/list-component";
 
 body {
   font-size: 1em;
