--- a/src/styles/components/header-component.scss
+++ b/src/styles/components/header-component.scss
@@ -4,16 +4,40 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 3em;
-  background-color: $personio-green;
+  height: 5em;
+  background-color: $personio-white;
+  border-bottom: 0.2em solid $personio-white;
+  min-width: 20em;
+  width: 100%;
 
   .language {
     position: absolute;
-    background-color: $personio-yellow;
+    background-color: $personio-white;
     top: 1.5em;
-    left: 1.5em;
+    right: 5%;
     padding: 0.5em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
     font-weight: 900;
     border-radius: 0.2em;
+    border: 0.2em solid $personio-black;
+    z-index: 4;
+
+    &:hover {
+      background-color: $personio-yellow;
+      cursor: pointer;
+    }
+  }
+
+  .logo {
+    position: absolute;
+    top: 1em;
+    left: 5%;
+    text-align: center;
+
+    svg {
+      min-width: 10em;
+      max-width: 10em;
+    }
   }
 }
