style: just a box-shadow variable added to global colors.

--- a/src/styles/globals/colors.scss
+++ b/src/styles/globals/colors.scss
@@ -2,3 +2,4 @@ $personio-black: #252525;
 $personio-white: #fff;
 $personio-yellow: #ffff00;
 $personio-green: #d5f0f7;
+$personio-box-shadow: rgba(57, 63, 72, 0.3);
