--- a/src/styles/pages/hierarchy.scss
+++ b/src/styles/pages/hierarchy.scss
@@ -1,6 +1,6 @@
 .hierarchy {
   position: absolute;
-  top: 0;
+  top: 5em;
   right: 0;
   bottom: 0;
   left: 0;
@@ -12,6 +12,6 @@
   .list {
     width: 100%;
     position: absolute;
-    top: 20%;
+    top: 10%;
   }
 }
