--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 
 @import "components/header-component";
 @import "components/list-component";
+@import "components/router-component";
 
 body {
   font-size: 1em;
