feat: style of error page just imported into the project.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 
 @import "pages/home";
 @import "pages/hierarchy";
+@import "pages/error";
 
 @import "components/header-component";
 @import "components/list-component";
