--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import "components/header-component";
 @import "components/list-component";
 @import "components/router-component";
+@import "components/uploader-component";
 
 body {
   font-size: 1em;
