feat: error boundary styles just imported to the project.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import "components/router-component";
 @import "components/uploader-component";
 @import "components/notification-component";
+@import "components/error-boundary-component";
 
 body {
   font-size: 1em;
