feat: styles of filter component just imported into the project.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
 @import "components/uploader-component";
 @import "components/notification-component";
 @import "components/error-boundary-component";
+@import "components/filter-component";
 
 body {
   font-size: 1em;
