--- a/src/styles/components/filter-component.scss
+++ b/src/styles/components/filter-component.scss
@@ -8,6 +8,9 @@
 
   &--inline-block > .container {
     display: inline-block;
+    @media (max-width: 22em) {
+      display: block;
+    }
   }
 
   &--block > .container {
@@ -18,6 +21,7 @@
     margin: 0.5em;
     color: $personio-black;
     font-weight: 900;
+
 
     input[type="radio"] {
       position: absolute;
@@ -46,7 +50,7 @@
       &:checked {
         + .label {
           &:before {
-            background-color: $personio-success;
+            background-color: $personio-black;
             box-shadow: inset 0 0 0 .25em $personio-white;
           }
         }
@@ -56,7 +60,7 @@
         + .label {
           &:before {
             outline: none;
-            border-color: $personio-success;
+            border-color: $personio-black;
           }
         }
       }
