--- a/src/styles/components/filter-component.scss
+++ b/src/styles/components/filter-component.scss
@@ -22,6 +22,13 @@
     color: $personio-black;
     font-weight: 900;
 
+    .label {
+      -moz-user-select: -moz-none;
+      -khtml-user-select: none;
+      -webkit-user-select: none;
+      -o-user-select: none;
+      user-select: none;
+    }
 
     input[type="radio"] {
       position: absolute;
