style: unselectable button just added to language changinng button.

--- a/src/styles/components/header-component.scss
+++ b/src/styles/components/header-component.scss
@@ -33,6 +33,11 @@
     font-weight: 900;
     border-radius: 0.2em;
     border: 0.2em solid $personio-black;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
     z-index: 4;
 
     &:hover {
