style: top just removed and margin just added to our hierarchy list.

--- a/src/styles/pages/hierarchy.scss
+++ b/src/styles/pages/hierarchy.scss
@@ -12,9 +12,6 @@
   .list {
     width: 100%;
     position: absolute;
-    top: 10%;
-    @media (max-width: 22em) {
-      top: 16%
-    }
+    margin-top: 1em;
   }
 }
